# AnimalChess

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  requirements.txt
core/: Cargo.toml
core/benches/: core_benmark.rs
core/src/: board.rs  chess.rs  gui.rs  lib.rs  pymodule.rs  tests.rs
core/src/player/: alpha_beta.rs  mcts.rs  mod.rs
pymodule/: Cargo.toml
pymodule/benches/: core_benchmark.py
pymodule/src/: lib.rs
pymodule/training/: alpha_zero_net.py  animal_chess_train.ipynb  mcts.py  pipeline.py  train.py  utils.py
src/: ai.rs  board.rs  chess.rs  game.rs  gui.rs  main.rs
