[package]
name = "animal_chess"
version = "0.1.1"
authors = ["netcan <1469709759@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Animal Fight Chess Game（斗兽棋） written in rust."
repository = "https://github.com/netcan/AnimalChess"
keywords = ["gamedev", "chess", "ai", "sdl"]

[dependencies]

[dependencies.sdl2]
version = "0.34.0"
default-features = false
features = ["image", "unsafe_textures"]

